# Deskset

./: .gitignore  PRIVACY.md  PRIVACY_EN.md  README.md  desktop.html  manager.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
100-Docs/: .gitignore  index.md
100-Site/: about.md  download.md  index.md  package-lock.json  tsconfig.json
200-DesksetFront/: .gitignore  components.json  desktop.html  excludeCSSPlugin.ts  float.html  manager.html  package-lock.json  package.json  style.less  tsconfig.json  vite.config.ts
200-Vite/: desktop.html  manager.html  package-lock.json  package.json  vite.config.ts
250-DesksetFront.AllInOne/: .gitignore  package-lock.json  package.json
300-DesksetBack/: .air.toml  .gitignore  go.mod  go.sum  main-prod.py  main.py  pyproject.toml  setup.py
300-DesksetBack.Go/: go.mod  go.sum  main.go
300-Tauri/: Cargo.toml  tauri.conf.json
350-DesksetBack.MCP/: main.py  pyproject.toml  setup.py
350-DesksetBack.MCP/src/deskset/: main.py
350-DesksetBack.MCP/src/deskset/app/: args.py  store.py
350-DesksetBack.MCP/src/deskset/app/router/: __init__.py
350-DesksetBack.MCP/src/deskset/app/router/kms/: __init__.py  note.py
350-DesksetBack.MCP/src/deskset/feature/device/: __init__.py  _unknown.py  win32.py
350-DesksetBack.MCP/src/deskset/feature/kms/: api.py  rpc.py
350-DesksetBack.MCP/src/deskset/shared/: constant.py  error.py  utils.py
350-DesksetBack.MCP/src/deskset/shared/lib/: __init__.py
350-DesksetBackMCP/: .gitignore  main-prod.py  main.py  pyproject.toml  setup.py
400-Build/: README.md  build.bat
i18n/: en.json  zh-cn.json
sample_widget/: main.vue
src-components/: request.js  widget.ts
src-desktop/: Desktop.vue  DesktopMain.vue  drag.ts  main.js  main.ts  tauri.ts  theme.ts
src-float/: Float.vue  main.ts  style.css
src-manager/: Manager.vue  Navigate.vue  child.ts  create-desktop.ts  main.ts  request.js  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop.rs  lib.rs  main.rs
src-tauri/src/setBottom/: main.c
(+501 files in other folders)
