[project]
name = "Deskset"
version = "0.0.2-alpha"
description = "数字桌搭后端 DesksetBack"
authors = [
    { name="旧日丨四季列车", email="Nostalgia-Season-Train@outlook.com" },
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12.10"
dependencies = [
    "arrow==1.3.0",
    "fastapi>=0.133.0",
    "fastmcp>=3.0.2",
    "psutil==6.0.0",
    "shutup>=0.3.0",
    "uvicorn>=0.41.0",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/Nostalgia-Season-Train/DesksetBack"
Issues = "https://github.com/Nostalgia-Season-Train/DesksetBack/issues"


# ==== Ruff 代码审查工具 ====
[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = [
    "E501",  # 行长度不超过 line-length 字符
]
