[package]
name = "Deskset"
version = "0.0.1-alpha"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deskset_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
# --- Tauri ---
tauri = { version = "2.0.6", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.0.0"
tauri-utils = "2.2.0"
tauri-plugin-upload = "2.2.1"
tauri-plugin-http = "2.4.3"
tauri-plugin-log = "2.4.0"

log = "0.4"  # 在 tauri-plugin-log 中设置 level 级别

# --- Serde ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 杂项 ---
libloading = "0.7.4"  # 加载 DLL 库
